// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders with label 1`] = `
<label
  className="checkbox checkbox--hasLabel"
>
  <input
    aria-checked="false"
    tabIndex="0"
    type="checkbox"
  />
  <span
    className="checkbox_indicator"
  />
  <span
    className="checkbox_label"
  >
    Heyo
  </span>
</label>
`;

exports[`<Checkbox /> renders without label 1`] = `
<label
  className="checkbox"
>
  <input
    aria-checked="false"
    tabIndex="0"
    type="checkbox"
  />
  <span
    className="checkbox_indicator"
  />
</label>
`;
